Update item menus to 1.20.5 format
Includes code cleanup of left-over pre-1.13 stuff